--- a/style/menu.css
+++ b/style/menu.css
@@ -18,7 +18,7 @@ header a:hover {
     padding: 10px 20px;
   }
   header #menu > ul > li > a {
-    font-size: 1.1rem;
+    font-size: .8rem;
     display: flex;
     justify-content: center;
     align-items: baseline;
@@ -89,7 +89,7 @@ header .div-nav {
     min-height: 300vh;
     /* height: 100vh; */
     transform: translateX(-100%);
-    font-size: larger;
+    font-size: 1rem;
     z-index: 1000;
     background-color: whitesmoke;
     animation: translateBack 0.3s ease-in-out alternate both;
